Beginning to update stuff

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -4,7 +4,7 @@
 /* Mobile */
 @media only screen and (min-width: 0rem) {
   :root {
-    --primary: #fb5607;
+    --primary: #386641;
     --primaryLight: #001F3F;
     --secondary: #E4A95F;
     --secondaryLight: #FFBA43;
